# trans

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.sh  test_trans.py  trans.py  trans_cli.py
trans/: __init__.py  cache.py  cli.py  config.py  diarizer.py  downloader.py  formatter.py  transcriber.py  utils.py
