[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trans-cli"
version = "0.4.0"
description = "Transcribe YouTube, TikTok, and Twitch videos to text with speaker diarization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Jackson", email = "jackson@reesee.dev" }
]
keywords = [
    "transcription",
    "youtube",
    "tiktok",
    "twitch",
    "whisper",
    "subtitles",
    "diarization",
    "speaker-identification"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "yt-dlp>=2024.01.0",
    "faster-whisper>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyperclip>=1.8.2",
    "platformdirs>=4.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
# Speaker diarization (who said what)
diarize = [
    "pyannote-audio>=3.1.0",
]
# TikTok browser impersonation (helps with some blocks)
tiktok = [
    "curl_cffi>=0.11",
]
# All optional features
all = [
    "pyannote-audio>=3.1.0",
    "curl_cffi>=0.11",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
trans = "trans.cli:app"

[project.urls]
Homepage = "https://github.com/ree-see/trans"
Repository = "https://github.com/ree-see/trans"
Issues = "https://github.com/ree-see/trans/issues"

[tool.hatch.build.targets.wheel]
packages = ["trans"]

[tool.hatch.build.targets.sdist]
include = [
    "trans/",
    "trans_cli.py",
    "README.md",
    "LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["test_trans.py"]
python_files = ["test_*.py"]
addopts = "-v"
